# iot_case_study

./: .gitignore  README.md  azure-pipelines.yml  case_study_task.txt  project_description.txt  pyproject.toml  requirements.txt
data/: sample_input.json
notebooks/: IoT case study 150326_0002.ipynb
src/: bronze.py  generate_synthetic.py  gold.py  run_pipeline.py  silver.py
tests/: conftest.py  test_generate_synthetic.py  test_integration_e2e.py  test_layers.py  test_notebook_spark.py  test_silver_ml.py
