[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "iot-sample"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = ["pandas>=2.0"]

[project.scripts]
iot-pipeline-layers = "src.run_pipeline:main"

[project.optional-dependencies]
ml    = ["scikit-learn>=1.3", "rapidfuzz>=3.0", "numpy>=1.24", "recordlinkage>=0.16"]
spark = ["pyspark>=3.4"]
test  = ["pytest>=8.0"]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
